--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
  //   implementation 'com.android.support:appcompat-v7:28.0.0'
    // implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
     // testImplementation 'junit:junit:'
