--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
+
+
         applicationId "com.example.stefapp"
         minSdkVersion 21
         targetSdkVersion 30
@@ -50,6 +52,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.8'
+
+
 
 
     // testImplementation 'junit:junit:'
