--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Stefapp">
-        <activity android:name=".Add_audio" />
-        <activity android:name=".SplashActivity">
+        <activity android:name=".Add_audio"
+            android:theme="@style/Theme.Stefapp.NoActionBar"/>
+        <activity android:name=".SplashActivity"
+            android:theme="@style/Theme.Stefapp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.LoginEmailPasswordActivity" />
-        <activity android:name=".login.LogActivity" />
+        <activity android:name=".login.LoginEmailPasswordActivity"
+            android:theme="@style/Theme.Stefapp.NoActionBar"/>
+        <activity android:name=".login.LogActivity"
+            android:theme="@style/Theme.Stefapp.NoActionBar"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
