--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.8'
     implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.10.8'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.8'
-
-
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
 
 
     // testImplementation 'junit:junit:'
