--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.10.8'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.8'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.github.jeancsanchez:JcPlayer:2.7.0'
 
 
     // testImplementation 'junit:junit:'
