--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+       // jcenter() // Warning: this repository is going to shut down
+        maven { url "https://jitpack.io" }
+
     }
 }
 
